# ChangeLog for schedule

*schedule-0.9:
	Martin Väth <martin at mvath.de>:
	- Introduce start-or-queue and even recommend its usage by mentioning
	  it in the main examples

*schedule-0.8:
	Martin Väth <martin at mvath.de>:
	- Allow unquoted environment variables inside environment variables
	- Use library for common functions, putting connection data to a class

*schedule-0.7:
	Martin Väth <martin at mvath.de>:
	- Do not allow permutation of options with arguments:
	  This simplifies passing options to commands or negative job numbers

*schedule-0.6:
	Martin Väth <martin at mvath.de>:
	- Fix bug in signal handling: cancel always correct job
	- Fix exit status of some commands like "schedule run"
	- Let 0 be the last job (instead of last job + 1) for
	  certain commands (run, bg, wait, cancel, list, status)
	- Send message length for nontrivial tasks

*schedule-0.5:
	Martin Väth <martin at mvath.de>:
	- Introduce SCHEDULE_OPTS and SCHEDULE_SERVER_OPTS
	- Quote newlines correctly

*schedule-0.4:
	Martin Väth <martin at mvath.de>:
	- Support optionally Unix domain sockets instead of TCP sockets.
	- Improve README, giving hints about security

*schedule-0.3:
	Martin Väth <martin at mvath.de>:
	- Handle timeouts

*schedule-0.2:
	Martin Väth <martin at mvath.de>:
	- Startup server as nobody. Fix openrc init

*schedule-0.1:
	Martin Väth <martin at mvath.de>:
	- Rebuild from scratch, based on https://github.com/vaeth/starter/